--- a/css/Cart.css
+++ b/css/Cart.css
@@ -2,6 +2,8 @@
             max-width: 1200px;
             margin: 40px auto;
             padding: 0 20px;
+            margin-top: 200px;
+            margin-bottom:150px;
         }
 
         .cart-header {
